--- a/src/App/index.css
+++ b/src/App/index.css
@@ -9,6 +9,14 @@
   color: white;
 }
 
-.App-header {
-  font-size: calc(10px + 2vmin);
+.App .ContentPortal {
+  height: 90vh;
+  width: 95%;
+  padding: 20px 0 0 0;
+}
+
+.App .ContentPortal > * {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
