--- a/src/App/index.css
+++ b/src/App/index.css
@@ -1,7 +1,5 @@
 .App {
   text-align: center;
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,9 +7,18 @@
   color: white;
 }
 
+.App a {
+  color: white;
+  text-decoration: none;
+}
+
+.App a:hover {
+  color: pink;
+}
+
 .App .ContentPortal {
-  height: 90vh;
   width: 95%;
+  max-width: 1100px;
   padding: 20px 0 0 0;
 }
 
@@ -19,4 +26,20 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.App .NavBar {
+  width: 100%;
+  border-bottom: 1px solid white;
+}
+
+.App .NavBar ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  list-style: none;
+}
+
+.App .NavBar ul > li {
+  margin: 0 40px 0 0;
 }
