--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -2,8 +2,8 @@
   font-size: 30px;
   margin: auto;
   margin-bottom: 30px;
-}
 
-.Header.small {
-  font-size: 23px;
+  &.small {
+    font-size: 23px;
+  }
 }
