--- a/src/components/Paragraph/index.scss
+++ b/src/components/Paragraph/index.scss
@@ -3,8 +3,8 @@
   font-size: 18px;
   margin: 20px 0;
   line-height: 30px;
-}
 
-.Paragraph.indent {
-  text-indent: 30px;
+  &.indent {
+    text-indent: 30px;
+  }
 }
