--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,17 @@ body {
 noscript {
   background-color: #ffffff;
   color: #000000;
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+
+  .alert {
+    margin: auto;
+  }
 }
 
 code {
