--- a/src/App/ContentPortal.scss
+++ b/src/App/ContentPortal.scss
@@ -1,4 +1,6 @@
-.Content {
+$transition-time: 250ms;
+
+.ContentPortal {
   width: 95%;
   max-width: 1100px;
   padding: 20px 0 0 0;
@@ -9,7 +11,7 @@
 
   .fade-enter-active {
     opacity: 1;
-    transition: opacity 250ms ease-in;
+    transition: opacity $transition-time ease-in;
   }
 
   .fade-exit {
@@ -18,10 +20,10 @@
 
   .fade-exit-active {
     opacity: 0;
-    transition: opacity 250ms ease-out;
+    transition: opacity $transition-time ease-out;
   }
 
-  & > * {
+  .Content > * {
     width: 100%;
     display: flex;
     flex-direction: column;
