--- a/src/_common.scss
+++ b/src/_common.scss
@@ -1,5 +1,6 @@
 $text-color: white;
 $link-color: pink;
+$bg-color: #282c34;
 
 $font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
