--- a/src/index.scss
+++ b/src/index.scss
@@ -5,23 +5,7 @@ body {
   font-family: common.$font-family;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #282c34;
-}
-
-noscript {
-  background-color: #ffffff;
-  color: #000000;
-  display: flex;
-  margin: auto;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-
-  .alert {
-    margin: auto;
-  }
+  background-color: common.$bg-color;
 }
 
 code {
