--- a/src/Projects/index.scss
+++ b/src/Projects/index.scss
@@ -11,16 +11,8 @@
     justify-content: space-between;
     margin: 0 0 50px 0;
 
-    &:nth-child(2n) {
+    &:nth-child(2n+1) {
       flex-direction: row-reverse;
-    }
-
-    a {
-      color: common.$link-color;
-
-      &:hover {
-        text-decoration: underline;
-      }
     }
 
     .ProjectImg {
